# multigrid-sgsim

./: .gitignore  README.md  pyproject.toml
examples/: demo_asm.ipynb  demo_mgsim.ipynb  demo_synthdata.ipynb
examples/data/: fl_xyvc.csv  gt_xyvc.csv  synthetic_flightlines.csv  synthetic_magnetic_groundtruth.csv
src/multigrid_sgsim/: __init__.py  asm.py  mgsim.py  sampling.py  segmenting.py  trendmaking.py  utils.py
tests/: test_imports.py
