[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "multigrid_sgsim"
version = "0.1.0"
description = "Multigrid simulation for airborne geophysical survey data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

# Core runtime deps needed by the package (importing & running your code)
dependencies = [
  "numpy>=1.25",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "xarray>=2023.6.0",
  "joblib>=1.3",
  "scikit-image>=0.22",
  "tqdm>=4.66",
  "scikit-gstat>=1.0",   # 'skgstat'
  "gstatsim",            # if on PyPI; if not, remove and document install
]

[project.optional-dependencies]
# Things you want for demos and dev, but not strictly required at runtime
demo = [
  "jupyterlab>=4",
  "ipykernel>=6",
  "nbformat>=5",
  "nbclient>=0.9",
  "nbmake>=1.4",
]
dev = [
  "ruff>=0.6",
  "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/multigrid_sgsim"]
