[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multigrid-sgsim"
version = "0.1.0"
description = "Multigrid sequential Gaussian simulation"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Rines" }]

# Runtime deps only (no pins). Pip will install these automatically.
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "matplotlib",
  "scipy",
  "scikit-learn",
  "scikit-image",     # for skimage
  "scikit-gstat",     # for skgstat
  "joblib",
  "gstatsim"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multigrid_sgsim*"]
