[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multigrid-sgsim"
version = "0.1.0"
description = "Multigrid sequential Gaussian simulation"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Rines" }]

# Runtime dependencies
dependencies = [
  "numpy>=1.24",
  "pandas>=2",
  "xarray>=2023.8",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "scikit-image>=0.21",
  "scikit-gstat>=1.0",
  "joblib>=1.3",
  "gstatsim"
]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["multigrid_sgsim*"]
